--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -25,5 +25,8 @@
     "eslint-config-next": "16.1.3",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "picomatch": "^4.0.2"
   }
 }
